# huggingface_playground

./: .gitignore  README.md  nlp_chatbot.py  requirements.zeroshot_audio_classification.txt  sentence_embeddings.py  setup_huggingface_venv.sh  translation.py
huggingface-cpp-inference-client/: CMakeLists.txt  README.md  main.cpp
huggingface-cpp-inference-client/include/: curl_wrapper.hpp  huggingface_task.hpp  image_classification.hpp  image_processing.hpp  image_segmentation.hpp  image_text_to_text.hpp  object_detection.hpp
huggingface-cpp-inference-client/src/: curl_wrapper.cpp  huggingface_task.cpp  image_classification.cpp  image_processing.cpp  image_segmentation.cpp  image_text_to_text.cpp  object_detection.cpp
multimodal_models/: clip.py  object_detection_example.py  owl.py  qwen2.5-vl.py  requirements.object_detection.txt  requirements.qwen2.5-vl.txt
other_examples/: object_detection.py
python/examples/: setup_huggingface_venv.md  zeroshot_audio_classification.py
python/multimodal_models/: grounding_dino.py
python/multimodal_models/clip/: clip.py  requirements.clip.txt
python/multimodal_models/qwen2.5-vl/: qwen2.5-vl_examples.py  qwen2.5-vl_object_detection.py
python/other_examples/: automatic_speech_recognition.py  requirements.txt
python/vision_models/: README_real_segmentation.md  dinov3.py  dinov3_sam_segmentation.py  requirements.txt  specialized_segmentation_models.py  vitpose.py
python/vision_models/dino/: README.dinov3.md  dinov2.py  dinov3_finetuned_segmentation.py  requirements.dinov3.txt  requirements_segmentation.txt
python/vision_models/vitpose/: vitpose_correct.ipynb
video_classification/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
video_classification/cmake/: CompilerWarnings.cmake  Sanitizers.cmake
video_classification/include/video_classification/: image_processor.hpp  json_utils.hpp  triton_client.hpp  video_processor.hpp  video_source_interface.hpp  video_utils.hpp  videomae_image_processor.hpp
video_classification/labels/: something-something-v2.txt
video_classification/python/: export.py  infer.py  model_export.md  training.md
video_classification/src/app/: CMakeLists.txt  main.cpp
video_classification/src/core/: CMakeLists.txt  json_utils.cpp  triton_client.cpp  video_processor.cpp  video_utils.cpp  videomae_image_processor.cpp
video_classification/tests/e2e/: CMakeLists.txt
video_classification/tests/unit/: CMakeLists.txt  test_main.cpp
vision_models/: deep_anything_v2.py  requirements.txt  rtdetrv2.py  samv2.py
